--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://garytsai.github.io/account/",
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.26",
+    "@material-ui/core": "^4.12.3",
     "file-saver": "^2.0.5",
     "firebase": "^7.14.4",
     "gh-pages": "^3.1.0",
@@ -15,9 +16,14 @@
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-mobile-datepicker": "^4.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.1",
-    "react-with-firebase-auth": "^1.3.2"
+    "react-thunk": "^1.0.0",
+    "react-with-firebase-auth": "^1.3.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
