--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "account",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "homepage": "https://garytsai.github.io/account/",
+  "homepage": "https://garytsai.github.io/",
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.26",
     "@material-ui/core": "^4.12.3",
+    "caniuse-lite": "^1.0.30001320",
     "file-saver": "^2.0.5",
     "firebase": "^7.14.4",
     "gh-pages": "^3.1.0",
