--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "account",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "homepage": "https://garytsai.github.io/account/",
+  "homepage": "https://garytsai.github.io/account",
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.26",
     "@material-ui/core": "^4.12.3",
+    "caniuse-lite": "^1.0.30001320",
     "file-saver": "^2.0.5",
     "firebase": "^7.14.4",
     "gh-pages": "^3.1.0",
@@ -17,7 +18,7 @@
     "react-dom": "^16.13.1",
     "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^3.4.1",
     "react-thunk": "^1.0.0",
     "react-with-firebase-auth": "^1.3.2",
