--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: Deploy to GitHub Pages
 env:
-  MY_SECRET   : ${{secrets.ACCOUNT_GITHUB_ACTION}}
+  MY_SECRET   : ${{secrets.ACCOUNT}}
   USER_NAME   : garyTsai
   USER_EMAIL  : githubaction@fake.com
   PUBLISH_DIR : ./build
@@ -20,7 +20,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-
+    tags:
+          - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
