--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^7.14.4",
     "gh-pages": "^3.1.0",
+    "history": "^5.3.0",
     "html2canvas": "^1.0.0-rc.7",
     "radium": "^0.26.0",
     "react": "^16.8.6",
@@ -19,7 +20,7 @@
     "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "react-thunk": "^1.0.0",
     "react-with-firebase-auth": "^1.3.2",
     "redux": "^4.1.2",
@@ -48,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
+    "redux-mock-store": "^1.5.4"
   }
 }
