--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^3.1.0",
     "history": "^5.3.0",
     "html2canvas": "^1.0.0-rc.7",
+    "mutationobserver-shim": "^0.3.7",
     "radium": "^0.26.0",
     "react": "^16.8.6",
     "react-circular-progressbar": "^2.0.3",
