--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # Use Install Dependencies    
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Run test
         run: |
           npm install
-          npm run build
+          npm run test
+
+      # Use Install Dependencies    
+      - name: Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: npm run build
 
       # Ignore the set-env
       - name: Set Actions Allow Unsecure Commands
